# UniLoader

./: .gitattributes  .gitignore  ASSET_LICENSES.md  CODE_SIGNING.md  LICENSE  PRIVACY.md  README.md  Start-UniLoader.cmd  firebase.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
firebase/: README.md  firestore.rules  storage.rules
firebase/functions/: package.json  pnpm-lock.yaml
firebase/functions/src/: index.ts
scripts/: audit-bundled-assets.mjs  generate-notification-sounds.mjs
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dependency_provider_definitions.json  game_definitions.json  lib.rs  main.rs  operation.rs  runtime_definitions.json
src/core/: archiveAnalyzer.ts  archiveUtils.ts
src/core/adapters/: adapter.ts  adapterRegistry.ts  bepinexAdapter.ts  looseFilesAdapter.ts  reframeworkAdapter.ts  ue4ssAdapter.ts  unrealPakAdapter.ts
src/core/archives/: zipArchive.ts
src/core/dependencies/: dependencyResolver.ts  knownDependencies.ts  providerContracts.ts
src/core/detection/: gameDetector.ts
src/core/install/: installer.ts
src/core/profiles/: profileStore.ts
src/renderer/: App.tsx  boundedCache.test.ts  boundedCache.ts  health.test.ts  health.ts  motion.test.tsx  motion.ts  styles.css  tauriApi.ts
src/shared/: contracts.ts
tests/: adapterDetection.test.ts  gameDetector.test.ts
