[package]
name = "uniloader"
version = "0.9.7"
description = "UniLoader cross-game mod manager"
authors = ["UniLoader"]
edition = "2021"

[lib]
name = "uniloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "uniloader"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rars = "0.4.2"
sevenz-rust2 = "0.21"
hex = "0.4"
keyring = { version = "3", features = ["windows-native"] }
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
toml_edit = "0.22"
serde_yaml = "0.9"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = "2"

[target.'cfg(windows)'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"] }
winreg = "0.55"
